--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
       "express": "2.3.11"
     , "jade": ">= 0.0.1"
     , "redis": "0.6.0"
-    , "expresso": ">=0.7.7"
-    , "gently": ">=0.9.1"
+    //, "expresso": ">=0.7.7"
+    //, "gently": ">=0.9.1"
   }
 }
